# appdirs

./: .gitignore  .travis.yml  CHANGES.md  CHANGES.rst  Dockerfile  HACKING.md  LICENSE.txt  MANIFEST.in  Makefile.py  README.md  README.rst  TODO.md  appdirs.komodoproject  appdirs.py  appdirs.pyi  appveyor.yml  pyproject.toml  setup.cfg  setup.py  tox.ini  toxbootstrap.py
.github/workflows/: pythonpackage.yml  test.yml
docs/: HACKING.md
lib/: appdirs.py
test/: api.doctests  test.py  test_api.py  test_api_darwin.py  test_api_linux.py  test_api_win32.py  test_appdirs.py
