[metadata]
name = appdirs
author = Trent Mick
author_email = trentm@gmail.com
maintainer = Trent Mick; Sridhar Ratnakumar; Jeff Rouse
maintainer_email = trentm@gmail.com; github@srid.name; jr@its.to
license = MIT
license_file = LICENSE.txt
description = A small Python module for determining appropriate platform-specific dirs, e.g. a "user data dir".
long_description = file: README.rst, CHANGES.rst
long_description_content_type = text/x-rst
keywords = application, directory, log, cache, user
url = https://github.com/ActiveState/appdirs
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: Implementation :: PyPy
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Software Development :: Libraries :: Python Modules

setup_requires = setuptools>=30.3.0; wheel

[options]
py_modules = appdirs

[bdist_wheel]
universal = 1
