[metadata]
name = appdirs
version = attr: appdirs.__version__
description = A small Python module for determining appropriate platform-specific dirs, e.g. a "user data dir".
long_description = file: README.rst, CHANGES.rst
license = MIT
author = Trent Mick
author_email = trentm@gmail.com
maintainer = Jeff Rouse
maintainer_email = jr@its.to
url = https://github.com/ActiveState/appdirs
keywords = application, directory, log, cache, user
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: Implementation :: PyPy
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Software Development :: Libraries :: Python Modules

[options]
python_requires = > = 2.7, ! = 3.0.*, ! = 3.1.*, ! = 3.2.*, ! = 3.3.*, ! = 3.4.*
py_modules = appdirs

[bdist_wheel]
universal = 1
